Routes safety added via middlewares
