# controller/companyControllers.js
@@ -8,25 +8,44 @@ const addcompany = async(req,res,next)=>{
     try {
         const {
             Registration,
-            Name,
+            CompanyName,
             Description,
-            Email,Phone,Website,Address,Headquarters,Founder
+            Email,Phone,Website,Address,Headquarters,Founder,
+            AdminPhone,AdminAddress,AdminEmail,AdminAge,AdminDateOfBirth,
+            Gender
+        
         }= req.body
         const Founder_name = Founder.Name;
         const company = new CompanySchema({
             Registration,
-            Name,Description,Email,Phone,Website,Address,Headquarters,Founder:{Name:Founder_name}
+            Name:CompanyName,Description,Email,Phone,Website,Address,Headquarters,Founder:{Name:Founder_name}
         })
         await company.save();
+        
         const password = `${Registration}@123`
-        console.log(password);
         
         const admin = new AdminSchema({
-            Name:Founder_name,Email,password,Role:"Company Admin",companyId:company._id,
+            Name:Founder_name,Email:AdminEmail
+            ,password,Role:"Company Admin",companyId:company._id,
         })
         await admin.save();
-        console.log(admin.password);
         
+        const department = new DepartmentSchema({
+            departmentId:`Admin${Registration}001`,
+            DepartmentName:'Admin',Company: company._id,
+            Description:"Admin functionality",
+            ManagerId:admin._id,Email,Phone
+        })
+        await department.save();
+        const employee =  new EmployeeSchema({
+            EmployeeID: 'ad001',
+            password : `${Registration}@123`,
+            Company: company._id,
+            Department:department._id,
+            Role:"Company Admin",Name:Founder_name,Gender,DateOfBirth: AdminDateOfBirth,
+            Address:AdminAddress,Age:AdminAge,Email:AdminEmail,Phone:AdminPhone,Email:AdminEmail
+        })
+        await employee.save();
         res.status(201).json({Message: "Company Created"});
     } catch (error) {
         res.send(error)
@@ -43,12 +62,20 @@ const getAllCompany =async (req,res)=>{
 }
 
 const updateCompany = async(req,res)=>{
+    console.log(req.user);
+    
     if(req.user.Role==='Company Admin' || req.user.Role==='Super Admin'){
         const admin  = req.user;
         const company =  await CompanySchema.findById(admin.companyId);
         
-        // Changes..............
-
+        console.log(company);
+        console.log(req.user);
+        
+        
+        for(key in req.body){
+            if(req.body[key] && key!=='user')company[key]=req.body[key];
+        }
+        
         company.save();
         return res.send(company);
     }
